--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -8,7 +8,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.example.distributedmobilitygroupproject.overview.OverviewFragment" />
+            type="com.example.distributedmobilitygroupproject.overview.OverviewViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -27,7 +27,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:listData="@{viewModel.ids}"
+            app:listData="@{viewModel.images}"
             app:spanCount="2"
             tools:itemCount="16"
             tools:listitem="@layout/grid_view_item" />
