adding addional dependencies and bug fixes

--- a/app/src/main/res/layout/grid_view_item.xml
+++ b/app/src/main/res/layout/grid_view_item.xml
@@ -8,7 +8,7 @@
             type="com.example.distributedmobilitygroupproject.network.SpotifyImage" />
     </data>
     <ImageView
-        android:id="@+id/mars_image"
+        android:id="@+id/spotify_image"
         android:layout_width="wrap_content"
         android:layout_height="170dp"
         android:scaleType="fitXY"
